--- a/index.html
+++ b/index.html
@@ -420,14 +420,14 @@
                                 text-transform: uppercase;
                             }
                         </style>
-                        <h2 class="css-1bpbg9l e6rfjya1">QA Engineer / Middle</h2>
+                        <h2 class="css-1bpbg9l e6rfjya1">QA Engineer</h2>
                         <style data-emotion="css 1y18pc6">
                             .css-1y18pc6 {
                                 margin: 3em 0;
                             }
                         </style>
                         <p class="css-1y18pc6 e1ddhcxs0">
-                            Привет!<br/>Занимаюсь тестированием WEB-приложений и пишу автотесты на Java.
+                            Привет!<br/>Занимаюсь тестированием и пишу автотесты на Java.
                         </p>
                         <style data-emotion="css hqrq7c">
                             .css-hqrq7c {
